vlib/v/checker/tests/lock_already_rlocked.out
vlib/v/checker/tests/lock_already_rlocked.v:11:8: error: `a` is already read-locked 
    9 |     }
   10 |     rlock a {
   11 |         lock a {
      |              ^
   12 |             a.x++
   13 |         }
