vlib/v/checker/tests/lock_already_rlocked.vv
struct St {
mut:
	x int
}

fn main() {
	shared a := &St{
		x: 5
	}
	rlock a {
		lock a {
			a.x++
		}
	}
	println(a.x)
}
